--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.0.24",
-    "vite": "^6.3.4"
+    "vite": "^6.3.4",
+    "vite-plugin-sitemap": "^0.7.1"
   }
 }
